# test

./: DEPLOYMENT_GUIDE.md  Download.py  Inference.py  PERFORMANCE_ANALYSIS_REPORT.md  PROJECT_SUMMARY.md  README.md  README_MCP.md  Test-AI-Agent - Langgraph.py  Test-AI-Agent-Langgraph.py  Test-AI-Agent.py  Test-AI-Modal.py  Test-AI-Tool.py  ai_tools_shared.py  deploy.py  mcp_config.json  mcp_server.py  requirements.txt  run_tests.py  sample_event_generator.py  setup.py  test_ai_tools_shared.py  test_basic_functionality.py  test_download.py  test_inference.py  test_json_utils.py  test_local_pipeline.py  test_mcp_server.py  test_mcp_verification.py  test_mcp_verification_enhanced.py  test_modal.py  test_run_tests.py
POC/Streaming_Pipeline/: .env.example  .gitignore  Bronze_to_Silver_DQX_Enhanced_Pipeline.py  Bronze_to_Silver_Pipeline.py  CHANGELOG.md  CONTRIBUTING.md  Databricks_Deployment_Guide.md  EventHub_Listener_HiveMetastore_Databricks.py  EventHub_Producer_Databricks.py  LICENSE  README.md  deployment_guide.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  test-results.xml
POC/Streaming_Pipeline/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
POC/Streaming_Pipeline/.github/workflows/: ci.yml  tests.yml
POC/Streaming_Pipeline/tests/: .env.test.template  README.md  TESTING_SOLUTION.md  __init__.py  cloud_test_eventhub_integration.py  conftest.py  conftest_backup.py  pytest.ini  requirements.txt  simple_test_bronze_to_silver_dqx.py  simple_test_eventhub_listener.py  simple_test_eventhub_producer.py
POC/Streaming_Pipeline/tests/break/: test_bronze_to_silver_dqx_enhanced_pipeline.py  test_eventhub_listener_hivemetastore_databricks.py  test_eventhub_producer_databricks.py
POC/Streaming_Purchase/: Plan_Core_Component_Curation_Validation.txt  Plan_Core_Component_Generate_Data .txt  Plan_Core_Component_Listener_Data.txt  Plan_Structure.txt  Plan_Test.txt  plan.txt
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CODE_QUALITY.md  Makefile  README.md  SECURITY.md  TESTING_GUIDE.md  bandit-report.json  generate-reports.bat  pyproject.toml  pytest.ini  quality-check.bat  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff-report.json  safety-report.json  sonar-project.properties  strategy_test.txt
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/class/: __init__.py  bronze_layer_handler.py  hive_metastore_manager.py  purchase_order_dqx_monitor.py  purchase_order_dqx_pipeline.py  purchase_order_dqx_rules.py  purchase_order_item_factory.py  purchase_order_item_listener.py  purchase_order_item_model.py  purchase_order_item_producer.py  purchase_order_silver_manager.py
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/notebooks/: PurchaseOrderItem_Bronze_to_Silver_DQX.py  PurchaseOrderItem_EventHub_Listener.py  PurchaseOrderItem_EventHub_Producer.py
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/reports/: pytest-report.html
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/tests/: conftest.py  pytest.ini
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/tests/fixtures/: azure_mocks.py  sample_data.py
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/tests/integration/: test_adls_storage.py  test_azure_cloud_integration.py  test_checkpoint_recovery.py  test_dqx_framework.py  test_end_to_end_pipeline.py  test_eventhub_integration.py  test_hive_metastore_operations.py
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/tests/performance/: test_concurrent_processing.py  test_dqx_performance.py  test_memory_usage.py  test_throughput_benchmarks.py
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/tests/unit/: test_bronze_layer_handler.py  test_hive_metastore_manager.py  test_purchase_order_dqx_monitor.py  test_purchase_order_dqx_pipeline.py  test_purchase_order_dqx_rules.py  test_purchase_order_item_factory.py  test_purchase_order_item_listener.py  test_purchase_order_item_model.py  test_purchase_order_item_producer.py  test_purchase_order_silver_manager.py
POC/Streaming_Purchase/Streaming_Purchase_Order_Item/utility/: __init__.py  azure_utils.py  databricks_utils.py  dqx_utils.py
infrastructure/: arm-template.json
notebooks/: EventHub_Delta_Pipeline.py
src/: main.py
src/config/: settings.py
src/consumer/: eventhub_consumer.py
src/delta/: delta_operations.py
src/monitoring/: health_check.py  logger.py  metrics.py
src/processing/: data_processor.py
tests/: test_config.py
